# python-qlient

./: .deepsource.toml  .gitignore  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.test.txt  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: docs.yml  publish.yml  pytest.yml
docs/: api.md  examples.md  index.md  install.md
docs/examples/: .graphqlconfig  custom_schema_provider.py  fields_addition_operator.py  index_quick_start.py  index_quick_start_query.graphql  index_quick_start_response.json  project_batches.md  query_all_films.graphql  query_all_films.py  query_film_by_id.graphql  read_schema_from_local_path.py  request_with_nested_fields.py  script_legend.md  simple_client_instantiation.py  simple_proxy_example.py  spacex-schema.graphql  swapi-schema.graphql  usage_custom_call_response_type.py  usage_custom_global_response_type.py  usage_default_response_type.py  using_custom_backends.py  using_field_class.py  using_fields_class.py  using_in_memory_cache.py  using_sqlite_cache.py
docs/usage/: backend.md  cache.md  client.md  fields.md  proxy.md  response.md  schema.md  schema_providers.md  settings.md  transport.md
qlient/: __about__.py  __init__.py  cache.py  client.py  exceptions.py  proxy.py  qb.py  schema.py  settings.py  transport.py  validators.py
qlient/schema/: __init__.py  loader.py  models.py  parser.py  providers.py  schema.py
requirements/: dev.txt  test.txt
site/: 404.html  index.html  sitemap.xml
site/examples/: combination_of_fields_and_field.py  custom_schema_provider.py  full_settings.py  index.html  index_quick_start.py  query_film_by_id.py  request_with_nested_fields.py  sending_custom_queries.py  simple_client_instantiation.py  simple_proxy_example.py  usage_client_simple.py  usage_proxy_custom_query.py  using_custom_backends.py  using_custom_requests_sessions.py  using_field_class.py  using_fields_class.py  using_sqlite_cache.py
site/examples/project_batches/: index.html
site/examples/script_legend/: index.html
site/install/: index.html
site/search/: search_index.json
site/usage/backend/: index.html
site/usage/cache/: index.html
site/usage/client/: index.html
site/usage/fields/: index.html
site/usage/proxy/: index.html
site/usage/schema/: index.html
site/usage/schema_providers/: index.html
site/usage/settings/: index.html
src/qlient/: __init__.py  __meta__.py  backend.py  builder.py  cache.py  client.py  exceptions.py  models.py  proxy.py  qb.py  response.py  settings.py  transport.py  types.py  utils.py  validators.py
src/qlient/http/: __init__.py  backends.py  clients.py  consts.py  exceptions.py  models.py  settings.py
src/qlient/schema/: __init__.py  loader.py  models.py  parser.py  providers.py  schema.py  types.py
tests/: __base__.py  __init__.py  conftest.py  test_backend.py  test_builder_directive.py  test_builder_field.py  test_builder_fields.py  test_builder_gql_query_builder.py  test_cache.py  test_client.py  test_clients.py  test_loaders.py  test_models.py  test_proxy.py  test_qb.py  test_qb_fields.py  test_qb_gql_query_builder.py  test_response.py  test_schema_models.py  test_schema_providers.py  test_schema_schema.py  test_schema_types.py  test_settings.py  test_transport.py  test_validators.py
tests/schema/: test_schema_loader.py  test_schema_parser.py  test_schema_providers.py  test_schema_schema.py  test_schema_types.py
