[tool.poetry]
name = "qlient"
version = "1.0.0"
description = "A fast and modern graphql client designed with simplicity in mind."
authors = ["Daniel Seifert <info@danielseifert.ch>"]
maintainers = ["Daniel Seifert <info@danielseifert.ch>"]
license = "MIT"
readme = "README.md"
homepage = "https://qlient-org.github.io/python-qlient/"
repository = "https://github.com/qlient-org/python-qlient"
documentation = "https://qlient-org.github.io/python-qlient/"
keywords = ["graphql", "client", "api", "query", "mutation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
packages = [
    { include = "qlient", from = "src" }
]
include = [
    "docs/*"
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
qlient-core = "^1.0.1"
requests = "^2.27.1"
websocket-client = "^1.3.3"

[tool.poetry.dev-dependencies]
coverage = "^6.4.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.19.0"
black = "^22.3.0"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.9"
mkdocstrings = { version = "^0.19.0", extras = ["python"] }
mkdocs-include-markdown-plugin = "^3.5.2"
strawberry-graphql = {extras = ["fastapi"], version = "^0.122.0"}
uvicorn = {extras = ["standard"], version = "^0.18.2"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
